// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UsageSnapshotsContainer full state it should render 1`] = `
<DocumentFragment>
  <main>
    <div
      class="header"
    >
      <h1>
        <span>
          Usage Snapshot Report
        </span>
        <a
          href="https://support.quill.org/en/articles/8358350-how-do-i-use-the-usage-snapshot-report"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt=""
            src="undefined/images/icons/file-document.svg"
          />
          <span>
            Guide
          </span>
        </a>
      </h1>
      <button
        class="quill-button contained primary medium focus-on-light"
        type="button"
      >
        Download Report
      </button>
    </div>
    <div
      aria-hidden="true"
      class="tabs"
    >
      <button
        class="tab selected-tab"
        type="button"
      >
        <img
          alt=""
          src="undefined/images/pages/administrator/usage_snapshot_report/outlined_star.svg"
        />
        <span>
          All
        </span>
      </button>
      <button
        class="tab"
        type="button"
      >
        <img
          alt=""
          src="undefined/images/pages/administrator/usage_snapshot_report/bulb.svg"
        />
        <span>
          Highlights
        </span>
      </button>
      <button
        class="tab"
        type="button"
      >
        <img
          alt=""
          src="undefined/images/pages/administrator/usage_snapshot_report/students.svg"
        />
        <span>
          Users
        </span>
      </button>
      <button
        class="tab"
        type="button"
      >
        <img
          alt=""
          src="undefined/images/pages/administrator/usage_snapshot_report/pencil.svg"
        />
        <span>
          Practice
        </span>
      </button>
      <button
        class="tab"
        type="button"
      >
        <img
          alt=""
          src="undefined/images/pages/administrator/usage_snapshot_report/teacher.svg"
        />
        <span>
          Classrooms
        </span>
      </button>
      <button
        class="tab"
        type="button"
      >
        <img
          alt=""
          src="undefined/images/pages/administrator/usage_snapshot_report/school.svg"
        />
        <span>
          Schools
        </span>
      </button>
    </div>
    <div
      class="filter-button-container"
    >
      <button
        class="interactive-wrapper focus-on-light"
        type="button"
      >
        <img
          alt="Filter icon"
          src="undefined/images/icons/icons-filter.svg"
        />
        Filters
      </button>
    </div>
    <div
      class="sections"
    >
      <section
        class="snapshot-section-wrapper"
      >
        <h2>
          <img
            alt=""
            src="undefined/images/pages/administrator/usage_snapshot_report/bulb.svg"
          />
          <span>
            Highlights
          </span>
        </h2>
        <div
          class="snapshot-section highlights"
        >
          <div
            class="snapshot-section-content"
          >
            <div
              class="counts"
            >
              <section
                class="snapshot-item snapshot-count medium "
              >
                <div
                  class="count-and-label"
                >
                  <span
                    class="count"
                  >
                    —
                  </span>
                  <span
                    class="snapshot-label"
                  >
                    Sentences written
                  </span>
                </div>
                <div
                  class="change"
                >
                  <span />
                </div>
              </section>
              <section
                class="snapshot-item snapshot-count medium "
              >
                <div
                  class="count-and-label"
                >
                  <span
                    class="count"
                  >
                    —
                  </span>
                  <span
                    class="snapshot-label"
                  >
                    Student learning hours
                  </span>
                </div>
                <div
                  class="change"
                >
                  <span />
                </div>
              </section>
            </div>
          </div>
        </div>
      </section>
      <section
        class="snapshot-section-wrapper"
      >
        <h2>
          <img
            alt=""
            src="undefined/images/pages/administrator/usage_snapshot_report/students.svg"
          />
          <span>
            Users
          </span>
        </h2>
        <div
          class="snapshot-section users"
        >
          <div
            class="snapshot-section-content"
          >
            <div
              class="counts"
            >
              <section
                class="snapshot-item snapshot-count small "
              >
                <div
                  class="count-and-label"
                >
                  <span
                    class="count"
                  >
                    —
                  </span>
                  <span
                    class="snapshot-label"
                  >
                    Active teachers
                  </span>
                </div>
                <div
                  class="change"
                >
                  <span />
                </div>
              </section>
              <section
                class="snapshot-item snapshot-count small "
              >
                <div
                  class="count-and-label"
                >
                  <span
                    class="count"
                  >
                    —
                  </span>
                  <span
                    class="snapshot-label"
                  >
                    Active students
                  </span>
                </div>
                <div
                  class="change"
                >
                  <span />
                </div>
              </section>
              <section
                class="snapshot-item snapshot-count small "
              >
                <div
                  class="count-and-label"
                >
                  <span
                    class="count"
                  >
                    —
                  </span>
                  <span
                    class="snapshot-label"
                  >
                    Teacher accounts created
                  </span>
                </div>
                <div
                  class="change"
                >
                  <span />
                </div>
              </section>
              <section
                class="snapshot-item snapshot-count small "
              >
                <div
                  class="count-and-label"
                >
                  <span
                    class="count"
                  >
                    —
                  </span>
                  <span
                    class="snapshot-label"
                  >
                    Student accounts created
                  </span>
                </div>
                <div
                  class="change"
                >
                  <span />
                </div>
              </section>
            </div>
            <div
              class="rankings"
            >
              <section
                class="snapshot-item snapshot-ranking no-data"
              >
                <div>
                  <div
                    class="header"
                  >
                    <h3>
                      Most active teachers
                    </h3>
                  </div>
                  <table
                    class="table"
                  >
                    <tbody>
                      <tr
                        class="header-row"
                      >
                        <th>
                          Teacher
                        </th>
                        <th>
                          Activities completed
                        </th>
                      </tr>
                      <tr
                        class="data-row"
                      >
                        <td>
                          —
                        </td>
                        <td>
                          —
                        </td>
                      </tr>
                      <tr
                        class="data-row"
                      >
                        <td>
                          —
                        </td>
                        <td>
                          —
                        </td>
                      </tr>
                      <tr
                        class="data-row"
                      >
                        <td>
                          —
                        </td>
                        <td>
                          —
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </section>
            </div>
          </div>
        </div>
      </section>
      <section
        class="snapshot-section-wrapper"
      >
        <h2>
          <img
            alt=""
            src="undefined/images/pages/administrator/usage_snapshot_report/pencil.svg"
          />
          <span>
            Practice
          </span>
        </h2>
        <div
          class="snapshot-section practice"
        >
          <div
            class="snapshot-section-content"
          >
            <div
              class="first-row"
            >
              <section
                class="snapshot-item snapshot-count small "
              >
                <div
                  class="count-and-label"
                >
                  <span
                    class="count"
                  >
                    —
                  </span>
                  <span
                    class="snapshot-label"
                  >
                    Activities assigned
                  </span>
                </div>
                <div
                  class="change"
                >
                  <span />
                </div>
              </section>
              <section
                class="snapshot-item snapshot-count small "
              >
                <div
                  class="count-and-label"
                >
                  <span
                    class="count"
                  >
                    —
                  </span>
                  <span
                    class="snapshot-label"
                  >
                    Activities completed
                  </span>
                </div>
                <div
                  class="change"
                >
                  <span />
                </div>
              </section>
              <section
                class="snapshot-item snapshot-count small "
              >
                <div
                  class="count-and-label"
                >
                  <span
                    class="count"
                  >
                    —
                  </span>
                  <span
                    class="snapshot-label"
                  >
                    Activity packs assigned
                  </span>
                </div>
                <div
                  class="change"
                >
                  <span />
                </div>
              </section>
              <section
                class="snapshot-item snapshot-count small "
              >
                <div
                  class="count-and-label"
                >
                  <span
                    class="count"
                  >
                    —
                  </span>
                  <span
                    class="snapshot-label"
                  >
                    Activity packs completed
                  </span>
                </div>
                <div
                  class="change"
                >
                  <span />
                </div>
              </section>
            </div>
            <div
              class="second-row"
            >
              <section
                class="snapshot-item snapshot-ranking no-data"
              >
                <div>
                  <div
                    class="header"
                  >
                    <h3>
                      Top concepts assigned
                    </h3>
                  </div>
                  <table
                    class="table"
                  >
                    <tbody>
                      <tr
                        class="header-row"
                      >
                        <th>
                          Concept
                        </th>
                        <th>
                          Activities assigned
                        </th>
                      </tr>
                      <tr
                        class="data-row"
                      >
                        <td>
                          —
                        </td>
                        <td>
                          —
                        </td>
                      </tr>
                      <tr
                        class="data-row"
                      >
                        <td>
                          —
                        </td>
                        <td>
                          —
                        </td>
                      </tr>
                      <tr
                        class="data-row"
                      >
                        <td>
                          —
                        </td>
                        <td>
                          —
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </section>
              <section
                class="snapshot-item snapshot-ranking no-data"
              >
                <div>
                  <div
                    class="header"
                  >
                    <h3>
                      Top concepts practiced
                    </h3>
                  </div>
                  <table
                    class="table"
                  >
                    <tbody>
                      <tr
                        class="header-row"
                      >
                        <th>
                          Concept
                        </th>
                        <th>
                          Activities completed
                        </th>
                      </tr>
                      <tr
                        class="data-row"
                      >
                        <td>
                          —
                        </td>
                        <td>
                          —
                        </td>
                      </tr>
                      <tr
                        class="data-row"
                      >
                        <td>
                          —
                        </td>
                        <td>
                          —
                        </td>
                      </tr>
                      <tr
                        class="data-row"
                      >
                        <td>
                          —
                        </td>
                        <td>
                          —
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </section>
            </div>
            <div
              class="third-and-fourth-row"
            >
              <section
                class="snapshot-item snapshot-count small "
              >
                <div
                  class="count-and-label"
                >
                  <span
                    class="count"
                  >
                    —
                  </span>
                  <span
                    class="snapshot-label"
                  >
                    Baseline diagnostics assigned
                  </span>
                </div>
                <div
                  class="change"
                >
                  <span />
                </div>
              </section>
              <section
                class="snapshot-item snapshot-count small "
              >
                <div
                  class="count-and-label"
                >
                  <span
                    class="count"
                  >
                    —
                  </span>
                  <span
                    class="snapshot-label"
                  >
                    Baseline diagnostics completed
                  </span>
                </div>
                <div
                  class="change"
                >
                  <span />
                </div>
              </section>
              <section
                class="snapshot-item snapshot-count small "
              >
                <div
                  class="count-and-label"
                >
                  <span
                    class="count"
                  >
                    —
                  </span>
                  <span
                    class="snapshot-label"
                  >
                    Growth diagnostics assigned
                  </span>
                </div>
                <div
                  class="change"
                >
                  <span />
                </div>
              </section>
              <section
                class="snapshot-item snapshot-count small "
              >
                <div
                  class="count-and-label"
                >
                  <span
                    class="count"
                  >
                    —
                  </span>
                  <span
                    class="snapshot-label"
                  >
                    Growth diagnostics completed
                  </span>
                </div>
                <div
                  class="change"
                >
                  <span />
                </div>
              </section>
              <section
                class="snapshot-item snapshot-count small "
              >
                <div
                  class="count-and-label"
                >
                  <span
                    class="count"
                  >
                    —
                  </span>
                  <span
                    class="snapshot-label"
                  >
                    Average activities completed per student
                  </span>
                </div>
                <div
                  class="change"
                >
                  <span />
                </div>
              </section>
              <a
                aria-label="Open link to feedback forum in new tab"
                class="focus-on-light snapshot-item snapshot-feedback"
                href="https://quillorg.canny.io/admin-feedback"
                rel="noopener noreferrer"
                target="_blank"
              >
                <div
                  class="header"
                >
                  <h3>
                    We’d love your feedback
                  </h3>
                  <img
                    alt=""
                    src="undefined/images/pages/administrator/new_tab.svg"
                  />
                </div>
                <p>
                  Looking for a specific metric? Visit our feedback forum to make a request and vote on ideas.
                </p>
              </a>
            </div>
            <div
              class="fifth-row"
            >
              <section
                class="snapshot-item snapshot-ranking no-data"
              >
                <div>
                  <div
                    class="header"
                  >
                    <h3>
                      Most assigned activities
                    </h3>
                  </div>
                  <table
                    class="table"
                  >
                    <tbody>
                      <tr
                        class="header-row"
                      >
                        <th>
                          Activity
                        </th>
                        <th>
                          Activities completed
                        </th>
                      </tr>
                      <tr
                        class="data-row"
                      >
                        <td>
                          —
                        </td>
                        <td>
                          —
                        </td>
                      </tr>
                      <tr
                        class="data-row"
                      >
                        <td>
                          —
                        </td>
                        <td>
                          —
                        </td>
                      </tr>
                      <tr
                        class="data-row"
                      >
                        <td>
                          —
                        </td>
                        <td>
                          —
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </section>
              <section
                class="snapshot-item snapshot-ranking no-data"
              >
                <div>
                  <div
                    class="header"
                  >
                    <h3>
                      Most completed activities
                    </h3>
                  </div>
                  <table
                    class="table"
                  >
                    <tbody>
                      <tr
                        class="header-row"
                      >
                        <th>
                          Activity
                        </th>
                        <th>
                          Activities completed
                        </th>
                      </tr>
                      <tr
                        class="data-row"
                      >
                        <td>
                          —
                        </td>
                        <td>
                          —
                        </td>
                      </tr>
                      <tr
                        class="data-row"
                      >
                        <td>
                          —
                        </td>
                        <td>
                          —
                        </td>
                      </tr>
                      <tr
                        class="data-row"
                      >
                        <td>
                          —
                        </td>
                        <td>
                          —
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </section>
            </div>
          </div>
        </div>
      </section>
      <section
        class="snapshot-section-wrapper"
      >
        <h2>
          <img
            alt=""
            src="undefined/images/pages/administrator/usage_snapshot_report/teacher.svg"
          />
          <span>
            Classrooms
          </span>
        </h2>
        <div
          class="snapshot-section classrooms"
        >
          <div
            class="snapshot-section-content"
          >
            <div
              class="counts"
            >
              <section
                class="snapshot-item snapshot-count small "
              >
                <div
                  class="count-and-label"
                >
                  <span
                    class="count"
                  >
                    —
                  </span>
                  <span
                    class="snapshot-label"
                  >
                    Active classrooms
                  </span>
                </div>
                <div
                  class="change"
                >
                  <span />
                </div>
              </section>
              <section
                class="snapshot-item snapshot-count small "
              >
                <div
                  class="count-and-label"
                >
                  <span
                    class="count"
                  >
                    —
                  </span>
                  <span
                    class="snapshot-label"
                  >
                    Average active classrooms per teacher
                  </span>
                </div>
                <div
                  class="change"
                >
                  <span />
                </div>
              </section>
              <section
                class="snapshot-item snapshot-count small "
              >
                <div
                  class="count-and-label"
                >
                  <span
                    class="count"
                  >
                    —
                  </span>
                  <span
                    class="snapshot-label"
                  >
                    Classrooms created
                  </span>
                </div>
                <div
                  class="change"
                >
                  <span />
                </div>
              </section>
              <section
                class="snapshot-item snapshot-count small "
              >
                <div
                  class="count-and-label"
                >
                  <span
                    class="count"
                  >
                    —
                  </span>
                  <span
                    class="snapshot-label"
                  >
                    Average active students per classroom
                  </span>
                </div>
                <div
                  class="change"
                >
                  <span />
                </div>
              </section>
            </div>
            <div
              class="rankings"
            >
              <section
                class="snapshot-item snapshot-ranking no-data"
              >
                <div>
                  <div
                    class="header"
                  >
                    <h3>
                      Most active grades
                    </h3>
                  </div>
                  <table
                    class="table"
                  >
                    <tbody>
                      <tr
                        class="header-row"
                      >
                        <th>
                          Grade
                        </th>
                        <th>
                          Activities completed
                        </th>
                      </tr>
                      <tr
                        class="data-row"
                      >
                        <td>
                          —
                        </td>
                        <td>
                          —
                        </td>
                      </tr>
                      <tr
                        class="data-row"
                      >
                        <td>
                          —
                        </td>
                        <td>
                          —
                        </td>
                      </tr>
                      <tr
                        class="data-row"
                      >
                        <td>
                          —
                        </td>
                        <td>
                          —
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </section>
            </div>
          </div>
        </div>
      </section>
      <section
        class="snapshot-section-wrapper"
      >
        <h2>
          <img
            alt=""
            src="undefined/images/pages/administrator/usage_snapshot_report/school.svg"
          />
          <span>
            Schools
          </span>
        </h2>
        <div
          class="snapshot-section schools"
        >
          <div
            class="snapshot-section-content"
          >
            <div
              class="ranking"
            >
              <section
                class="snapshot-item snapshot-ranking no-data"
              >
                <div>
                  <div
                    class="header"
                  >
                    <h3>
                      Most active schools
                    </h3>
                  </div>
                  <table
                    class="table"
                  >
                    <tbody>
                      <tr
                        class="header-row"
                      >
                        <th>
                          School
                        </th>
                        <th>
                          Activities completed
                        </th>
                      </tr>
                      <tr
                        class="data-row"
                      >
                        <td>
                          —
                        </td>
                        <td>
                          —
                        </td>
                      </tr>
                      <tr
                        class="data-row"
                      >
                        <td>
                          —
                        </td>
                        <td>
                          —
                        </td>
                      </tr>
                      <tr
                        class="data-row"
                      >
                        <td>
                          —
                        </td>
                        <td>
                          —
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </section>
            </div>
          </div>
        </div>
      </section>
    </div>
    <div
      id="bottom-element"
    />
  </main>
</DocumentFragment>
`;

exports[`UsageSnapshotsContainer limited state it should render 1`] = `
<DocumentFragment>
  <div
    class="restricted-page"
  >
    <img
      alt="Gray lock"
      src="undefined/images/pages/administrator/premium_lock.svg"
    />
  </div>
</DocumentFragment>
`;

exports[`UsageSnapshotsContainer loading state it should render 1`] = `
<DocumentFragment>
  <div
    class="loading-spinner"
  >
    <div
      class="spinner-container"
    >
      <img
        alt=""
        class="spinner"
        src="https://assets.quill.org/images/icons/loader_still.svg"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`UsageSnapshotsContainer restricted state it should render 1`] = `
<DocumentFragment>
  <div
    class="restricted-page"
  >
    <img
      alt="Gray lock"
      src="undefined/images/pages/administrator/premium_lock.svg"
    />
  </div>
</DocumentFragment>
`;
